--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,30 +1,39 @@
 .friendList {
   display: flex;
-  gap: 10px;
+  gap: 20px; 
   list-style: none;
   padding: 0;
+  justify-content: center; 
 }
 
 .friendListItem {
-  border: 1px solid #ccc;
+  border: 2px solid black;
   border-radius: 10px;
   padding: 14px;
-  /* margin: 10px; */
   text-align: center;
+  width: 120px; 
+  height: 168px;
 }
 
 .avatar {
   border-radius: 50%;
+  width: 80px; 
+  height: 80px;
+  object-fit: cover; 
 }
 
 .name {
   font-size: 1.2em;
   font-weight: bold;
+  margin-bottom: 5px;
 }
 
 .status {
+  border-radius: 6px;
+  padding: 10px;
   font-size: 1em;
-  margin-top: 5px;
+  margin-top: 0px;
+  margin-bottom: 0;
 }
 
 .online {
